<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<!-- 
	# to run acceptance from CI (ie. start containers, deploy apps, run tests and stop containers) 
	mvn clean install -Pbrms,itest -o
	
	# to start containers for Development purposes: 
	mvn clean package cargo:run -Pbrms
	
	http://localhost:8080/business-central/maven2/org/jboss/quickstarts/brms6/business-rules/6.0.0-SNAPSHOT/business-rules-6.0.0-SNAPSHOT.jar
	http://localhost:8080/webapp/rest/rules/execute/test1
	
	-->
	<modelVersion>4.0.0</modelVersion>
	<name>${project.groupId}.${project.artifactId}</name>
	<parent>
		<groupId>org.jboss.quickstarts</groupId>
		<artifactId>brms6</artifactId>
		<version>6.0.0-SNAPSHOT</version>
	</parent>
	<groupId>org.jboss.quickstarts.brms6</groupId>
	<artifactId>acceptance</artifactId>

	<properties>
		<cucumber.version>1.1.3</cucumber.version>
		<bpms-local.m2repo>${project.build.directory}/bpms-local-m2repo</bpms-local.m2repo>
		<bpms-remote.m2repo>file://${user.home}/.m2/repository</bpms-remote.m2repo>
		<client-local.m2repo>${project.build.directory}/client-local-m2repo</client-local.m2repo>
	</properties>
	
	<build>
		<plugins>
			<!-- disable test by default, itest will use the failsafe plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.15</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>brms</id>
			<activation><activeByDefault>false</activeByDefault></activation>
			<build>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
						<filtering>true</filtering>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.1</version>
						<configuration>
							<source>1.7</source>
							<target>1.7</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.codehaus.cargo</groupId>
						<artifactId>cargo-maven2-plugin</artifactId>
						<version>1.1.3</version>
						<executions>
							<execution>
								<id>start-container</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>start</goal>
								</goals>
							</execution>
							<execution>
								<id>stop-container</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>stop</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<container>
								<!-- Tomcat deploy info @ https://github.com/droolsjbpm/kie-wb-distributions/blob/master/kie-wb/kie-wb-distribution-wars/src/main/tomcat7/README.txt -->
								<!-- tomcat -> http://repo1.maven.org/maven2/org/apache/tomcat/tomcat/7.0.35/tomcat-7.0.35.zip -->
								<!-- 
								<containerId>jboss7x</containerId>
								<home>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1</home>
								-->
								<containerId>tomcat7x</containerId>
								<artifactInstaller>
									<groupId>org.apache.tomcat</groupId>
									<artifactId>tomcat</artifactId>
									<version>7.0.35</version>
								</artifactInstaller>
								<output>${project.build.directory}/logs/container.log</output>
								<log>${project.build.directory}/logs/cargo-plugin.log</log>
								<timeout>120000</timeout>
								<systemProperties>
								<!-- 
									<org.kie.demo>false</org.kie.demo>
								 -->
									<!-- push the temporary CI information into target folder ready to be cleaned up  -->
									<org.uberfire.nio.git.dir>${project.build.directory}</org.uberfire.nio.git.dir>
									<!-- local repo for BPMS -->
									<org.guvnor.m2repo.dir>${bpms-local.m2repo}</org.guvnor.m2repo.dir>
									<!-- maven settings for BPMS remote repo -->
									<kie.maven.settings.custom>${project.build.directory}/classes/settings.xml</kie.maven.settings.custom>
									<kie.maven.client.settings.custom>${project.build.directory}/classes/client-settings.xml</kie.maven.client.settings.custom>
									
									<!-- 
									these were added in an attempt to get bpms working on eap-6 - it failed but I dont know why. 
									<jboss.server.base.dir>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1/standalone</jboss.server.base.dir>
									<user.dir>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1</user.dir>
									<logging.configuration>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1/standalone/configuration/logging.properties</logging.configuration>
									<org.jboss.boot.log.file>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1/standalone/log/boot.log</org.jboss.boot.log.file>
									-->
									
									<!-- for deployment on Tomcat7 -->
									<btm.root>${project.build.directory}/cargo/configurations/tomcat7x</btm.root>
									<bitronix.tm.configuration>${project.build.directory}/cargo/configurations/tomcat7x/conf/btm-config.properties</bitronix.tm.configuration>
									<jbpm.tsr.jndi.lookup>=java:comp/env/TransactionSynchronizationRegistry</jbpm.tsr.jndi.lookup>
									<!-- /for deployment on Tomcat7 -->
									
								</systemProperties>
								<!-- these end up in <tomcat_home>/common/lib -->
								<dependencies>
									<dependency>
										<groupId>org.slf4j</groupId>
										<artifactId>slf4j-api</artifactId>
									</dependency>
									<!--
									<dependency>
										<groupId>org.slf4j</groupId>
										<artifactId>slf4j-log4j12</artifactId>
									</dependency>
									<dependency>
										<groupId>log4j</groupId>
										<artifactId>log4j</artifactId>
									</dependency>
									-->
									<!-- for deployment on Tomcat7 -->
									<dependency>
										<groupId>org.kie</groupId>
										<artifactId>kie-tomcat-integration</artifactId>
									</dependency>
									<dependency>
										<groupId>javax.security.jacc</groupId>
										<artifactId>javax.security.jacc-api</artifactId>
									</dependency>
									<dependency>
									    <groupId>org.codehaus.btm</groupId>
									    <artifactId>btm-tomcat55-lifecycle</artifactId>
									</dependency>
									<dependency>
									    <groupId>org.apache.geronimo.specs</groupId>
									    <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
									</dependency>
									<dependency>
									    <groupId>org.codehaus.btm</groupId>
									    <artifactId>btm</artifactId>
									</dependency>
									<dependency>
									    <groupId>com.h2database</groupId>
									    <artifactId>h2</artifactId>
									</dependency>
									<dependency>
									    <groupId>javax.transaction</groupId>
									    <artifactId>jta</artifactId>
									</dependency>
									<!-- /for deployment on Tomcat7 -->
								</dependencies>
							</container>
							<configuration>
								<properties>
									<!--
										-Dcom.sun.management.jmxremote.port=6000
										-Dcom.sun.management.jmxremote.authenticate=false
										-Dcom.sun.management.jmxremote.ssl=false
										-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000 -Xnoagent
									-->
									<cargo.jvmargs>
										-Xmx1024m
										-XX:MaxPermSize=256m
									</cargo.jvmargs>
								</properties>
								<configfiles>
									<configfile>
										<file>${project.build.directory}/classes/tomcat7x/server.xml</file>
										<todir>conf/</todir>
										<tofile>server.xml</tofile>
									</configfile>
									<configfile>
										<file>${project.build.directory}/classes/tomcat7x/tomcat-users.xml</file>
										<todir>conf/</todir>
										<tofile>tomcat-users.xml</tofile>
									</configfile>
									<configfile>
										<file>${project.build.directory}/classes/tomcat7x/context.xml</file>
										<todir>conf/</todir>
										<tofile>context.xml</tofile>
									</configfile>
									<configfile>
										<file>${project.build.directory}/classes/tomcat7x/btm-config.properties</file>
										<todir>conf/</todir>
										<tofile>btm-config.properties</tofile>
									</configfile>
									<configfile>
										<file>${project.build.directory}/classes/tomcat7x/resources.properties</file>
										<todir>conf/</todir>
										<tofile>resources.properties</tofile>
									</configfile>
								</configfiles>
								<deployables>
									<deployable>
										<groupId>org.kie</groupId>
										<artifactId>kie-drools-wb-distribution-wars</artifactId>
										<classifier>tomcat7.0</classifier>
										<type>war</type>
										<properties>
											<context>business-central</context>
										</properties>
									</deployable>
									<deployable>
										<groupId>org.jboss.quickstarts.brms6</groupId>
										<artifactId>order-service</artifactId>
										<type>war</type>
										<properties>
											<context>order-service</context>
										</properties>
									</deployable>
									<!--
									<deployable>
										<groupId>org.sonatype.nexus</groupId>
										<artifactId>nexus-webapp</artifactId>
										<type>war</type>
										<properties>
											<context>nexus</context>
										</properties>
									</deployable>
									-->
								</deployables>
							</configuration>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.jboss.kie.maven</groupId>
						<artifactId>maven-kie-deployer-plugin</artifactId>
						<version>1.0.0</version>
						<executions>
							<execution>
								<id>deploy-kie-modules</id>
								<phase>package</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
								<configuration>
									<debug>true</debug>
									<serverUri>http://localhost:8080/business-central</serverUri>
									<username>admin</username>
									<password>admin</password>
									<timeoutInSeconds>60</timeoutInSeconds>
									<deployables>
										<deployable>
											<groupId>org.jboss.quickstarts.brms6</groupId>
											<artifactId>business-rules</artifactId>
											<version>6.0.0-SNAPSHOT</version>
											<strategy>PER_PROCESS_INSTANCE</strategy> <!-- SINGLETON, PRE_REQUEST or PER_PROCESS_INSTANCE -->
										</deployable>
									</deployables>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<profile>
            <id>itest</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.15</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <failIfNoTests>true</failIfNoTests>
                            <parallel>none</parallel>
                            <threadCount>1</threadCount>
                            <includes>
                                <include>**/*RunCucumberTests.java</include>
                            </includes>
                        </configuration>
                        <executions>
                            <execution>
                                <id>integration-test</id>
                                <goals>
                                    <goal>integration-test</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>verify</id>
                                <goals>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
	</profiles>

	<dependencies>
		<!--
		<dependency>
			<groupId>org.sonatype.nexus</groupId>
			<artifactId>nexus-webapp</artifactId>
			<version>2.8.1-01</version>
			<type>war</type>
		</dependency>
		-->

		<dependency>
			<groupId>org.kie</groupId>
			<artifactId>kie-drools-wb-distribution-wars</artifactId>
			<classifier>tomcat7.0</classifier>
			<!--
			<version>6.1.0.CR2</version>
			-->
			<version>${brms.version}</version>
			<type>war</type>
		</dependency>
		<dependency>
			<groupId>org.jboss.quickstarts.brms6</groupId>
			<artifactId>order-service</artifactId>
			<version>6.0.0-SNAPSHOT</version>
			<type>war</type>
		</dependency>
		
		
		<!-- required for deploying on Tomcat7 -->
		<dependency>
		    <groupId>org.codehaus.btm</groupId>
		    <artifactId>btm-tomcat55-lifecycle</artifactId>
		    <version>2.1.4</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.geronimo.specs</groupId>
		    <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
		    <version>1.1.1</version>
		</dependency>
		<dependency>
		    <groupId>org.codehaus.btm</groupId>
		    <artifactId>btm</artifactId>
		    <version>2.1.4</version>
		</dependency>
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <version>1.4.179</version>
		</dependency>
		<dependency>
		    <groupId>javax.transaction</groupId>
		    <artifactId>jta</artifactId>
		    <version>1.1</version>
		</dependency>
		<dependency>
			<groupId>javax.security.jacc</groupId>
			<artifactId>javax.security.jacc-api</artifactId>
			<version>1.5</version>
		</dependency>
		<dependency>
			<groupId>org.kie</groupId>
			<artifactId>kie-tomcat-integration</artifactId>
			<!--
			TODO: MALLEN DEFECT! missing artifact for org.kie:kie-wb-distributions:pom:6.0.3-redhat-4 in http://maven.repository.redhat.com/techpreview/all
			<version>6.0.3-redhat-4</version>
			<version>${brms.version}</version>
			-->
			<version>6.0.2-redhat-6</version>
		</dependency>
		<!-- /required for deploying on Tomcat7 -->
		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.2</version>
		</dependency>
		
		<!-- 
		<dependency>
			<groupId>org.kie</groupId>
			<artifactId>kie-drools-wb-distribution-wars</artifactId>
			<classifier>tomcat7.0</classifier>
			<type>war</type>
			<version>6.1.0.CR1</version>
		</dependency>
		 -->

		<!-- 
		<dependency>
			<groupId>org.kie</groupId>
			<artifactId>kie-drools-wb-webapp</artifactId>
			<version>6.1.0.CR1</version>
			<type>war</type>
		</dependency>
		 -->

		<!-- cucumber bdd framework -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		
		<!-- to force module build order only -->
		<dependency>
			<groupId>org.jboss.quickstarts.brms6</groupId>
			<artifactId>business-rules</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<!-- for http interactions -->
		<dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>1.8.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.2.5</version>
        </dependency>
	</dependencies>
</project>
